# graphing-calculator

./: .eslintrc.json  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  types.ts  vercel.json
app/: layout.tsx  page.tsx  providers.tsx
app/app/: page.tsx
components/: Graph.tsx  GraphContours.tsx  GraphEquation.tsx  GraphEquationInternal.tsx  GraphExpression.tsx  GraphGrid.tsx  GraphLine.tsx  GraphPoint.tsx  Latex.tsx  MathLiveInput.tsx  MathQuillInput.tsx  Navigation.tsx  ThemeToggle.tsx
hooks/: useApplyUniforms.ts  useClippingPlanes.ts  useDragPan.ts  useFlatContoursForEquation.ts  usePanAndZoom.ts  useResizeObserver.ts  useTrianglesForEquation3D.ts  useVectorField.tsx  useWorkQueue.ts  useWorldCoordinateTransformation.ts
lib/: index.ts
mathquill-0.10.1/: mathquill.css  mathquill.js
pages/: _app.tsx  app.tsx  index.tsx  leafVertexPlayground.tsx  test.tsx  usegpu.tsx
rust/joshs_graphing_calculator_lib/: Cargo.toml  notes.md
rust/joshs_graphing_calculator_lib/benches/: my_benchmark.rs
rust/joshs_graphing_calculator_lib/pkg/: joshs_graphing_calculator_lib.d.ts  joshs_graphing_calculator_lib.js  joshs_graphing_calculator_lib_bg.js  joshs_graphing_calculator_lib_bg.wasm  joshs_graphing_calculator_lib_bg.wasm-opt.wasm  joshs_graphing_calculator_lib_bg.wasm.d.ts  package.json
rust/joshs_graphing_calculator_lib/src/: ast.rs  equation.rs  expression.rs  graphing.rs  lib.rs  point.rs  segment.rs  triangle.rs  vector.rs
utils/: lerp.ts  tailwindColors.ts
workers/: graphEquation.worker.ts  graphEquationAPI.ts
(+75 files in other folders)
