[package]
name = "joshs_graphing_calculator_lib"
version = "0.1.0"
authors = ["Josh Pullen <hello@joshuapullen.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "joshs_graphing_calculator_lib"
path = "src/lib.rs"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
wasm-bindgen = "0.2"
num = "0.4.0"
nalgebra = "0.31.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
rand = { version = "0.8.5", features = ["std_rng"], default-features = false }

[dev-dependencies]
criterion = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
